Fixed dependency from gravity-and-orbits onto simsharing
# 00.00.05 (49606) Mar 8, 2011
# 00.00.04 (49604) Mar 8, 2011
Send images as part of the data payload
# 00.00.03 (48121) Jan 20, 2011
# 00.00.02 (48120) Jan 20, 2011
# 00.00.01 (48118) Jan 20, 2011
Added Classroom.main that launches 30 students and improved threading for student startup
Save and restore selected mode
Added animated thumbnail
Added the ability to watch multiple students in different windows
# null.null.00 (47924) Jan 12, 2011
Made simsharing build and deploy as a Java simulation project
Added the ability to view and choose between connected students
Converted to single server model, in which the teacher connects to the server and sends requests for the latest data.  This is a polling model, since server to client push doesn't seem to be supported by Akka
Converted to akka for networking